--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,7 @@
 spring.application.name=springboot-security-oauth2-social
 
-github.client-id=Ov23liYhV61s6fSKeiXd
-github.client-secret=5bbbf03e226e9e32046c317be8017d6866a50605
+spring.security.oauth2.client.registration.github.client-id=${GITHUB_CLIENT_ID:existing_client_id}
+spring.security.oauth2.client.registration.github.client-secret=${GITHIB_CLIENT_SECRET:existing_client_secret}
 
-#spring.security.oauth2.client.registration.github.client-id=Ov23liYhV61s6fSKeiXd
-#spring.security.oauth2.client.registration.github.client-secret=5bbbf03e226e9e32046c317be8017d6866a50605
 
 
