--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=springboot-security-oauth2-social
 
 spring.security.oauth2.client.registration.github.client-id=${GITHUB_CLIENT_ID:existing_client_id}
-spring.security.oauth2.client.registration.github.client-secret=${GITHIB_CLIENT_SECRET:existing_client_secret}
+spring.security.oauth2.client.registration.github.client-secret=${GITHUB_CLIENT_SECRET:existing_client_secret}
 
 
 
